--- a/source/index.html
+++ b/source/index.html
@@ -41,12 +41,12 @@
       <section class="programs">
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="programs__list">
-          <li class="programs__item programs__item--slim">
+          <li class="programs__item programs__item--odd programs__item--slim">
             <h3 class="programs__title text text--subtitle">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="programs__catalog-link link text text--bigger" href="#">Каталог Slim</a>
           </li>
-          <li class="programs__item programs__item--pro">
+          <li class="programs__item programs__item--even programs__item--pro">
             <h3 class="programs__title text text--subtitle">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="programs__catalog-link link text text--bigger" href="#">Каталог pro</a>
@@ -56,39 +56,42 @@
       <section class="process">
         <h2 class="process__title text text--title">Как это работает</h2>
         <ul class="process__list">
-          <li class="process__item process__item--nutrients">
+          <li class="process__item process__item--odd process__item--nutrients">
             <p class="process__text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
-          <li class="process__item process__item--powder">
+          <li class="process__item process__item--even process__item--powder">
             <p class="process__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
-          <li class="process__item process__item--replace">
+          <li class="process__item process__item--odd process__item--replace">
             <p class="process__text">Замените один-два приема обычной еды на наше фунциональное питание.</p>
           </li>
-          <li class="process__item process__item--results">
+          <li class="process__item process__item--even process__item--results">
             <p class="process__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
       </section>
       <section class="example">
-        <h2 class="example__title text text--title">Живой пример</h2>
-        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
-        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="example__middle">
-          <div class="example__statistics">
-            <ul class="example__statistics-list">
-              <li class="example__statistics-item">
-                <div class="example__statistics-value text text--subtitle">5 кг</div>
-                <p class="example__statistics-text">Снижение веса</p>
-              </li>
-              <li class="example__statistics-item">
-                <div class="example__statistics-value text text--subtitle">60 дней</div>
-                <p class="example__statistics-text">Затрачено времени</p>
-              </li>
-            </ul>
+        <div class="example__column">
+          <h2 class="example__title text text--title">Живой пример</h2>
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="example__middle">
+            <div class="example__statistics">
+              <ul class="example__statistics-list">
+                <li class="example__statistics-item">
+                  <div class="example__statistics-value text text--subtitle">5 кг</div>
+                  <p class="example__statistics-text">Снижение веса</p>
+                </li>
+                <li class="example__statistics-item">
+                  <div class="example__statistics-value text text--subtitle">60 дней</div>
+                  <p class="example__statistics-text">Затрачено времени</p>
+                </li>
+              </ul>
+            </div>
+            <p class="example__expenses text"><span class="example__expenses-text">Затраты на питание:</span><span class="example__expenses-number">15 000 руб.</span></p>
           </div>
-          <p class="example__expenses text">Затраты на питание: 15 000 руб.</p>
         </div>
+        <div class="example__column example__column--cat">
           <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
           <div class="before-after example__before-after">
             <span class="before-after__text text text--bigger">Было</span>
@@ -97,6 +100,7 @@
             </div>
             <span class="before-after__text text text--bigger">Стало</span>
           </div>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
